<resources>
    <string name="app_name">CityNet</string>
    <string name="sortir">Sortir</string>
    <string name="Ajuda">Ajuda</string>
    <string name="Menu">Perfil Usuari</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="formulari_d_alta">Formulari D\'Alta</string>
    <string name="formulari_perfil">Perfil d\'Usuari</string>
    <string name="formulari_canvi_pwd">Canvi de Pwd</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="email">Email</string>
    <string name="adresa">Adreça</string>
    <string name="ciutat">Ciutat</string>
    <string name="codi_postal">Codi Postal</string>
    <string name="password">Password</string>
    <string name="enviar">Enviar</string>
    <string name="editar">Editar</string>
    <string name="cancel_lar">CANCEL·LAR</string>
    <string name="addUserURL"><![CDATA[http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/UserManager?action=UserRegister&user=]]></string>
    <string name="editUser">http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/UserManager?action=UpdateUserProfile</string>
    <string name="cambiar_pwd">Cambiar Pwd</string>
    <string name="pwd_actual">pwd actual</string>
    <string name="nou_pwd">nou Pwd</string>
    <string name="repetiex_el_nou_pwd">repetiex el nou pwd</string>
    <string name="change_pwd">Canviar Pwd</string>
    <string name="loginUrl">http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/UserManager?action=UserLogin</string>
    <string name="loginUrlhtpps">https://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8443/citynet/UserManager?action=UserLogin</string>
    <string name="msg_login">LOGIN RESULT</string>
    <string name="getProfileUrl">http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/UserManager?action=AskUserProfile</string>
    <string name="ChangePwd">http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/UserManager?action=ChangePassword</string>
    <string name="title_activity_maps_container">City Net Maps</string>
    <string name="containerUrl">http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/ContainerManager?action=ListAllContainers</string>
    <string name="crearIncident">http://ec2-35-180-7-53.eu-west-3.compute.amazonaws.com:8080/citynet/IncidentManager?action=IncidentNotification</string>
    <string name="gesti_containers">Gestió Containers</string>
    <string name="idContainer">IdContainer</string>
    <string name="latitud">latitud</string>
    <string name="longitud">Longitud</string>
    <string name="tipus">Tipus</string>
    <string name="operatiu">Operatiu</string>
    <string name="incid_ncia">Incidència</string>
    <string name="nova_incid_ncia">Nova</string>
    <string name="torna_enrere">Torna</string>
    <string name="TitleMapsActivity">Maps Activity</string>
    <string name="selecciona_container">Selecciona</string>
    <string-array name="Incidents_array">
        <item>full</item>
        <item>broken</item>
    </string-array>
</resources>
